miising comma lmao

--- a/json/project.json
+++ b/json/project.json
@@ -42,7 +42,7 @@
 					 "link":"http://mcgamejam.com/",
 					 "devpost":"https://thfix13.itch.io/pizzarena"},
 		"description":["A fast 1v1 game about two pizza guy fighting for which topping is the best",
-						"One of the <b>honour mention</b> in this Game Jam"
+						"One of the <b>honour mention</b> in this Game Jam",
 						"Group project with Thomas Fix, Roberto Buelvas and Lorenzo Carrara"],
 		"type":"Hackathon Projects",
 		"group":"Yes",
